# Multicore-Assignments

./: .gitignore
1/: HW.tex
1/codes/: 5B-Changed.cpp  5D-1.cpp  5E-1.cpp  5E-2.cpp
1/commons/: course.sty
1/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex
2/: HW.tex
2-2/codes/fibonacci/: fibo.c
2-2/codes/matrix/: Makefile  matrix-inner-1.c  matrix-inner-16.c  matrix-inner-4.c  matrix-inner-64.c  matrix-inner-7.c  matrix-inner-8.c  matrix-outer-1.c  matrix-outer-16.c  matrix-outer-4.c  matrix-outer-64.c  matrix-outer-7.c  matrix-outer-8.c  matrix.c  result.txt  runner.sh
2-2/commons/: course.sty
2-2/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex
2/codes/: .gitignore  4-1.c  4-2.c  4-3.c  4-4.c
2/commons/: course.sty
2/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex
3/: HW.tex
3/codes/: 3-a.s  3-b.s
3/commons/: course.sty
3/questions/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex
3/shapes/: 3-c.pptx
4/GreenScreen/: CMakeLists.txt  main.c
4/ImageInverter/: CMakeLists.txt  main.cu
4/ImageSharper/: CMakeLists.txt  bmp.c  main.c
4/ImageSharperCUDA/: CMakeLists.txt  bmp.cu  bmp.cuh  main.cu
4/PI/: CMakeLists.txt  main.cu
4/SobelEdgeDetector/: CMakeLists.txt  brighter.cu  brighter.cuh  main.cu  params.h  reader.cu  reader.cuh  saver.cu  saver.cuh  sobel.cu  sobel.cuh
4/SobelEdgeDetectorCPU/: CMakeLists.txt  brighter.cpp  brighter.h  main.cpp  reader.cpp  reader.h  saver.cpp  saver.h  sobel.cpp  sobel.h
4/SobelEdgeDetectorGUI/: .gitignore  REPORT.MD  main.py
4/spmv/: Cargo.toml  IMPLEMENTAION.MD  README.md
4/spmv/benches/: dense.rs  (+3 more)
(+40 files in other folders)
